@@ -35,7 +35,8 @@ version ? (????-??-??):
     WARNING: This update changes required version of Smarty from 2.6 to 3.x.
     		It was quite strongly tested with Smarty 3.1.3
     -----------------------------------------------------------------
-
+  - quicksearch: fixed search for hosts when exact mac address was entered [chilan]
+  
 version 1.11.13 Dira (2011-04-07)
 
   - contrib/cutoff2: Fixed "Column 'period' in where clause is ambiguous" [alec]
